fixed compare search image overflow

--- a/compare/static/compare/css/compare.css
+++ b/compare/static/compare/css/compare.css
@@ -206,7 +206,7 @@
 
 .search-item-wrapper {
     width: 100%;
-    min-height: 80px;
+    min-height: 98.14px;
     border-radius: 6px;
     background-color: #393d41;
     box-shadow: 0px 0px 10px black;
